--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Peace Of Mind</title>
+  <title>Peace Of Mind - Medical User</title>
   <link href="/css/non-med-styles.css" rel="stylesheet">
   <link href="/css/status-history.css" rel="stylesheet">
 </head>
