--- a/src/main/resources/templates/nonMedicalUser.html
+++ b/src/main/resources/templates/nonMedicalUser.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Peace Of Mind</title>
+	<title>Peace Of Mind - Non Medical User</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 </head>
 
