--- a/src/main/resources/templates/patient-home.html
+++ b/src/main/resources/templates/patient-home.html
@@ -3,7 +3,13 @@
 
 <head>
 <title>A Patient</title>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 <link href="/css/patient-main-style.css" rel="stylesheet">
+
 <script type="text/javascript" src="/js/patient-home.js"></script>
 <script>
       const swapInnerDivTargetSelectors = [
@@ -117,12 +123,10 @@
 		</section>
 
 	</div>
-
-	<footer>
-		<small>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final
-			project</small>
-	</footer>
-
+		<footer id="footer">
+			<small>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus
+				Final project</small>
+		</footer>
 	<script src="./js/add-status.js"></script>
 
 </body>
