--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -68,8 +68,8 @@ nav h2 {
 	grid-gap: 5%;
 	padding: 5%;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(3, 1fr);
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
 }
 
 section {
@@ -101,7 +101,6 @@ section a {
 	visibility: visible;
 	background: transparent;
 	color: #04496b;
-
 	text-decoration: none;
 }
 
@@ -133,90 +132,11 @@ section div {
 	border-radius: 15%;
 }
 
-footer {
-	padding-top: 3%;
+#footer {
 	text-align: center;
 	color: black;
 }
 
-/* .medUser.hover {
-	position: fixed;
-	display: block;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	color: blue;
-	background-color: rgba(0, 0, 0, 0.5); 
-	z-index: 2;
-	cursor: pointer;
-} */
-
-/* .medUser.hover .medUserInfo {
-	position: absolute;
-	overflow: visible;
-	top: 50%;
-	left: 50%;
-	height: 50px;
-	font-size: 50px;
-	color: blue;
-	transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-} */
-/* .nonMedUser.hover {
-	position: fixed;
-	display: block;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	color: blue;
-	background-color: rgba(0, 0, 0, 0.5); 
-	z-index: 2;
-	cursor: pointer;
-} */
-
-/* .nonMedUser.hover .nonMedUserInfo {
-	position: absolute;
-	overflow: visible;
-	top: 50%;
-	left: 50%;
-	height: 50px;
-	font-size: 50px;
-	color: blue;
-	transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-} */
-/* .userInfo.hover {
-	position: fixed;
-	display: block;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	color: blue;
-	background-color: rgba(0, 0, 0, 0.5); 
-	z-index: 2;
-	cursor: pointer;
-} */
-
-/* .userInfo.hover .userInfo {
-	position: absolute;
-	overflow: visible;
-	top: 50%;
-	left: 50%;
-	height: 50px;
-	font-size: 50px;
-	color: blue;
-	transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-} */
 
 .medUser li, .nonMedUser li, userInfo li {
 	visibility: visible;
@@ -226,3 +146,43 @@ section p, section h3, section ul, section li, section address {
 	background: transparent;
 }
 
+@media screen and (max-width: 750px) {
+	.dashboard {
+		grid-template-columns: 1fr;
+		grid-column-gap: 1em;
+		margin: 1em auto;
+		position: relative;
+	}
+}
+
+@media screen and (max-width: 40em) {
+	.dashboard {
+		grid-template-columns: 1fr;
+		grid-column-gap: 1em;
+		width: 60vw;
+		margin: 1em auto;
+		max-width: 90%;
+		position: relative;
+	}
+}
+
+@media screen and (max-width: 25em) {
+	.dashboard {
+		grid-template-columns: 1fr;
+		grid-column-gap: 1em;
+		margin: 1em auto;
+		position: relative;
+		padding: .5rem;
+	}
+	nav h2 {
+		width: auto;
+		min-width: unset;
+		max-width: 90%;
+		position: relative;
+	}
+	nav.open h2 {
+		visibility: hidden;
+		display: block;
+		max-width: 90%;
+	}
+}
