Fixed the titles to be uniform and informative

--- a/src/main/resources/templates/medications.html
+++ b/src/main/resources/templates/medications.html
@@ -2,7 +2,7 @@
 <html xmlns: th="http://www.thymeleaf.org">
 
 <head>
-    <title>Medications</title>
+    <title>Peace of Mind - Medications</title>
 </head>
 <h1>A List of Medications</h1>
 <body>
