--- a/src/main/resources/templates/my-medications.html
+++ b/src/main/resources/templates/my-medications.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Patient-Medications</title>
+  <title>Peace of Mind - Patient Medications</title>
   <link href="/css/medications-style.css" rel="stylesheet">
   <script type="text/javascript">
     function asyncAddMedicationLog(evt){
