--- a/src/main/resources/templates/nonMedicalUserPOV.html
+++ b/src/main/resources/templates/nonMedicalUserPOV.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Care Giver Account</title>
+    <title>Peace of Mind - Caregiver Home</title>
 </head>
 <body class="container">
     <header>
