--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -10,10 +10,6 @@
 	background-color: #ebf5fa;
 }
 
-.container {
-	max-width: auto;
-	text-align: center;
-}
 
 section:hover {
 	transform: scale(1.02);
@@ -63,8 +59,13 @@ nav h2 {
 	background: transparent;
 }
 
+.container {
+
+	max-width: auto;
+	text-align: center;
+}
 .dashboard {
-	height: 100%;
+
 	grid-gap: 5%;
 	padding: 5%;
 	display: grid;
@@ -130,6 +131,7 @@ section div {
 	height: 0;
 	transition: .5s ease;
 	border-radius: 15%;
+	text-align: center;
 }
 
 #footer {
@@ -148,11 +150,18 @@ section p, section h3, section ul, section li, section address {
 
 @media screen and (max-width: 750px) {
 	.dashboard {
+		display: grid;
 		grid-template-columns: 1fr;
 		grid-column-gap: 1em;
 		margin: 1em auto;
 		position: relative;
+		height:1500px;
 	}
+	
+	.container{
+		height: 1500px;
+	}
+
 }
 
 @media screen and (max-width: 40em) {
@@ -173,6 +182,7 @@ section p, section h3, section ul, section li, section address {
 		margin: 1em auto;
 		position: relative;
 		padding: .5rem;
+		
 	}
 	nav h2 {
 		width: auto;
