Updated Medication Instructions on MedUser and NonMedUserInfo pages to match Patient

--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -60,8 +60,9 @@
             <br/>
             <h4>[[${medication.genericName}]]</h4>
             <p>Reason for administration: [[${medication.reason}]]</p>
-            <p>Dosage: [[${medication.dosage}]] via [[${medication.administration}]] every [[${medication.frequencyAmount}]] [[${medication.frequencyTime}]]</p>
-          </div>
+            <p th:if="${medication.frequencyTime.name() == 'As_Needed'}">Dose: [[${medication.dosage}]] via [[${medication.administration}]] as needed</p>
+            <p th:unless="${medication.frequencyTime.name() == 'As_Needed'}">Dose: [[${medication.dosage}]] via [[${medication.administration}]] [[${medication.frequencyAmount}]]x [[${medication.frequencyTime}]]</p>
+              </div>
         </ul>
       </div>
       <br/>
