--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -155,6 +155,7 @@ section p, section h3, section ul, section li, section address {
 .patientStatus img.emotionsIcon {
   visibility: visible;
   display: inherit;
+}
 
 
 @media screen and (max-width: 750px) {
