Update titles per Izzy's request / removed obsolete files

--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>A Patient</title>
+  <title>Peace Of Mind - Personal Info</title>
   <link href="/css/styles.css" rel="stylesheet">
 </head>
 
