--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Peace Of Mind</title>
+  <title>Peace Of Mind - Add Medications</title>
   <link href="/css/non-med-styles.css" rel="stylesheet">
   <link href="/css/addmeds.css" rel="stylesheet">
 </head>
