--- a/src/main/resources/templates/med-tracker-history-med.html
+++ b/src/main/resources/templates/med-tracker-history-med.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Peace Of Mind</title>
+	<title>Peace Of Mind - Medication Adherence</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 	<link href="/css/grid-medHistory.css" rel="stylesheet">
 </head>
