--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Peace Of Mind - Non Medical User</title>
+	<title>Peace Of Mind - Caregiver Home</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 	<link href="/css/status-history.css" rel="stylesheet">
 </head>
