--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -157,7 +157,13 @@ section p, section h3, section ul, section li, section address {
   display: inherit;
 }
 
+.patientStatus, .emotionIndicator {
+	display: flex;
+	flex-direction: rows;
+	justify-content: center;
+	align-items:center;
 
+}
 @media screen and (max-width: 750px) {
 	.dashboard {
 		display: grid;
