Medication and Diary on Patient Page are full links instead of the line of text

--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -157,6 +157,10 @@ section p, section h3, section ul, section li, section address {
   display: inherit;
 }
 
+.link-box {
+	text-decoration: none;
+}
+
 
 @media screen and (max-width: 750px) {
 	.dashboard {
