--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -10,7 +10,6 @@
 	background-color: #ebf5fa;
 }
 
-
 section:hover {
 	transform: scale(1.02);
 	box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
@@ -60,12 +59,11 @@ nav h2 {
 }
 
 .container {
-
 	max-width: auto;
 	text-align: center;
 }
-.dashboard {
 
+.dashboard {
 	grid-gap: 5%;
 	padding: 5%;
 	display: grid;
@@ -138,7 +136,6 @@ section div {
 	color: black;
 }
 
-
 .medUser li, .nonMedUser li, userInfo li {
 	visibility: visible;
 }
@@ -153,10 +150,13 @@ section p, section h3, section ul, section li, section address {
 }
 
 .patientStatus img.emotionsIcon {
-  visibility: visible;
-  display: inherit;
+	visibility: visible;
+	display: inherit;
 }
 
+.emotionIndicator {
+	padding: .5rem;
+}
 
 @media screen and (max-width: 750px) {
 	.dashboard {
@@ -165,13 +165,11 @@ section p, section h3, section ul, section li, section address {
 		grid-column-gap: 1em;
 		margin: 1em auto;
 		position: relative;
-		height:1500px;
-	}
-	
-	.container{
 		height: 1500px;
 	}
-
+	.container {
+		height: 1500px;
+	}
 }
 
 @media screen and (max-width: 40em) {
@@ -187,12 +185,12 @@ section p, section h3, section ul, section li, section address {
 
 @media screen and (max-width: 25em) {
 	.dashboard {
-		grid-template-columns: 1fr;
+		display: grid; 
+		grid-template-columns : 1fr;
 		grid-column-gap: 1em;
 		margin: 1em auto;
 		position: relative;
 		padding: .5rem;
-		
 	}
 	nav h2 {
 		width: auto;
@@ -205,5 +203,9 @@ section p, section h3, section ul, section li, section address {
 		display: block;
 		max-width: 90%;
 	}
-
+	#footer {
+		position: relative;
+		padding-top: 2rem;
+		
+	}
 }
