--- a/src/main/resources/static/css/diary-style.css
+++ b/src/main/resources/static/css/diary-style.css
@@ -63,13 +63,25 @@ nav h2 {
 }
 
 div {
-	text-aling: center;
+	text-align: center;
 	padding: 0.5em;
 }
 
-input {
+label, p {
+	font-size: 18px;
+}
+
+label {
+	display: block;
+}
+
+textarea {
 	margin-top: .5rem;
 	padding: 2.5px;
+	height: 8em;
+	width: 30em;
+	font-size: 16px;
+	background: #fff;
 }
 
 button {
