--- a/src/main/resources/static/css/medications-style.css
+++ b/src/main/resources/static/css/medications-style.css
@@ -90,10 +90,13 @@ section {
 
 .medication h3 {
   background: transparent;
+  font-size: 1.5em;
 }
 
 .medication p {
   background: transparent;
+  font-size: 1.2em;
+  text-align: center;
 }
 
 
@@ -132,6 +135,10 @@ section {
   justify-content: center;
 }
 
+.log-medication p {
+  font-size: 1.2em;
+}
+
 footer {
   text-align: center;
   color: black;
@@ -145,16 +152,15 @@ footer {
 
 
 @media screen and (max-width: 750px) {
-	.dashboard {
-     display: flex;
-      flex-direction: column;
-      justify-content: center;
-	}
+  .dashboard {
+    margin: 1em;
+    grid-template-columns: 1fr;
+  }
+  
 }
 
 @media screen and (max-width: 40em) {
 	.dashboard {
-		margin: 1em auto;
 		position: relative;
 	}
 	footer {
@@ -163,12 +169,7 @@ footer {
 }
 
 @media screen and (max-width: 25em) {
-	.dashboard {
-		margin: 1em auto;
-		position: relative;
-	}
-	
-		nav h2 {
+	nav h2 {
 		width: auto;
 		min-width: unset;
 		max-width: 100%;
