--- a/src/main/resources/templates/my-medications.html
+++ b/src/main/resources/templates/my-medications.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Peace of Mind - Patient Medications</title>
+  <link href="/css/button.css" rel="stylesheet">
   <link href="/css/medications-style.css" rel="stylesheet">
   <script type="text/javascript">
     function asyncAddMedicationLog(evt){
