--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -5,6 +5,7 @@
 	<title>Peace Of Mind - Caregiver Home</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 	<link href="/css/status-history.css" rel="stylesheet">
+	<link href="/css/button.css" rel="stylesheet">
 </head>
 
 <body class="container">
