--- a/src/main/resources/static/css/medications-style.css
+++ b/src/main/resources/static/css/medications-style.css
@@ -105,27 +105,6 @@ section {
   position: relative;
 }
 
-
-.log-medication button {
-  background: transparent;
-  height: 2em;
-  border: none;
-  background-image: linear-gradient(#0f87c3, #068bcd 0%, #49b9f2 100%);
-  font-size: medium;
-  border-radius: 10px;
-  padding: 2%;
-  outline: transparent;
-  text-align: center;
-  line-height: 0;
-  font-weight: bold;
-  margin-bottom: .5em;
-}
-
-.log-medication button:hover {
-  transform: scale(1.02);
-  box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
-}
-
 .log-medication {
   padding: 0;
   margin: 2%;
@@ -137,6 +116,10 @@ section {
 
 .log-medication p {
   font-size: 1.2em;
+}
+
+button {
+  padding: 4%;
 }
 
 footer {
