--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -5,6 +5,7 @@
   <title>Peace Of Mind - Add Medications</title>
   <link href="/css/non-med-styles.css" rel="stylesheet">
   <link href="/css/addmeds.css" rel="stylesheet">
+  <link href="/css/button.css" rel="stylesheet">
 </head>
 
 <body class="container">
