--- a/src/main/resources/templates/med-tracker-history-med.html
+++ b/src/main/resources/templates/med-tracker-history-med.html
@@ -5,6 +5,7 @@
 	<title>Peace Of Mind - Medication Adherence</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 	<link href="/css/grid-medHistory.css" rel="stylesheet">
+	<link href="/css/button.css" rel="stylesheet">
 </head>
 
 <body class="container">
