--- a/src/main/resources/templates/patient-diary.html
+++ b/src/main/resources/templates/patient-diary.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link href="/css/button.css" rel="stylesheet">
 <link href="/css/diary-style.css" rel="stylesheet">
 </head>
 
