--- a/src/main/resources/templates/user-login.html
+++ b/src/main/resources/templates/user-login.html
@@ -2,20 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <link href="/css/login-style.css" rel="stylesheet">
     <title>Peace of Mind - Login</title>
 </head>
 
 <body class="container">
-    <header>
-        <h2>Welcome</h2>
+    <header class= "banner">
+        <img class="logo" src="images/logo.png" alt="logo">
     </header>
     <form method="GET">
         <div>
-            <label>Username:</label>
+            <label>Username</label>
             <input type="text" name="userName">
         </div>
         <div>
-            <label>Password:</label>
+            <label>Password</label>
             <input type="password" name="password">
         </div>
         <div>
@@ -27,5 +28,6 @@
         <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
     </footer>
 </body>
+
 
 </html>
