--- a/src/main/resources/templates/user-login.html
+++ b/src/main/resources/templates/user-login.html
@@ -13,7 +13,7 @@
     <form method="GET">
         <div>
             <label>Username</label>
-            <input type="text" name="userName">
+            <input type="text" name="userName" autocomplete="off">
         </div>
         <div>
             <label>Password</label>
