added icon to tab of page for all web pages

--- a/src/main/resources/templates/patient-home.html
+++ b/src/main/resources/templates/patient-home.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <title>Peace of Mind - Patient Home</title>
 
 <meta charset="utf-8">
