--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>Peace Of Mind - Add Medications</title>
   <link href="/css/non-med-styles.css" rel="stylesheet">
   <link href="/css/addmeds.css" rel="stylesheet">
