--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <title>Peace of Mind - Login</title>
 </head>
 
