--- a/src/main/resources/templates/med-tracker-history-non-med.html
+++ b/src/main/resources/templates/med-tracker-history-non-med.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<title>Peace Of Mind - Medication Adherence</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 	<link href="/css/grid-medHistory.css" rel="stylesheet">
