--- a/src/main/resources/templates/my-medications.html
+++ b/src/main/resources/templates/my-medications.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+ 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>Peace of Mind - Patient Medications</title>
   <link href="/css/button.css" rel="stylesheet">
   <link href="/css/medications-style.css" rel="stylesheet">
