--- a/src/main/resources/templates/nonMedicalUser.html
+++ b/src/main/resources/templates/nonMedicalUser.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<title>Peace Of Mind - Caregiver</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
 	<link href="/css/personal-info.css" rel="stylesheet">
