--- a/src/main/resources/templates/patient-diary.html
+++ b/src/main/resources/templates/patient-diary.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <title>Peace of Mind - Patient Diary</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
