--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>Peace Of Mind - Personal Info</title>
   <link href="/css/styles.css" rel="stylesheet">
 </head>
