--- a/src/main/resources/templates/user-login.html
+++ b/src/main/resources/templates/user-login.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+   	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link href="/css/login-style.css" rel="stylesheet">
     <title>Peace of Mind - Login</title>
 </head>
